fix main_logo not centered

--- a/assets/style/graph.css
+++ b/assets/style/graph.css
@@ -95,7 +95,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 500px;
+  width: 660px;
   border-radius: 30px;
   padding: 16px;
   background-color: var(--background-green);
